--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,8 @@ p {
   font-size: 4rem;
   margin-bottom: 0.75rem;
   line-height: 1.1;
+  -webkit-text-stroke: 0.1rem #93cb52;
+  text-transform: uppercase;
 }
 
 .m-heading {
@@ -134,6 +136,7 @@ p {
   align-items: center;
   height: 100%;
   padding: 0 2rem;
+  /* text-shadow: 0.4rem 0.3rem 0.7rem #93cb52; */
   /* Overlay */
   position: absolute;
   top: 60px;
@@ -166,4 +169,68 @@ p {
 
 #who .who-img {
   background: url(../img/Who-I-Am.jpg) no-repeat center center/cover;
+}
+
+/* Section: Contact */
+#Contact {
+  display: flex;
+}
+
+#Contact div {
+  flex: 1;
+}
+
+#Contact img {
+  border-radius: 50%;
+  width: 3rem;
+  height: 3rem;
+}
+
+form {
+  padding: 5rem 1rem;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  padding: 0 2rem;
+}
+
+input[type="text"] {
+  border: 2px solid rgb(55, 170, 55);
+  border-radius: 10px;
+  padding: 0.5rem;
+  width: 100%;
+  height: 10%;
+}
+input[type="email"] {
+  border: 2px solid rgb(55, 170, 55);
+  border-radius: 10px;
+  padding: 0.5rem;
+  width: 100%;
+  height: 10%;
+}
+input[type="tel"] {
+  border: 2px solid rgb(55, 170, 55);
+  border-radius: 10px;
+  padding: 0.5rem;
+  width: 100%;
+  height: 10%;
+}
+textarea {
+  border: 2px solid rgb(55, 170, 55);
+  border-radius: 10px;
+  padding: 0.5rem;
+  width: 100%;
+  height: 30%;
+}
+button {
+  border: 2px solid rgb(55, 170, 55);
+  border-radius: 10px;
+  padding: 0.5rem;
+  width: 20%;
+  height: 5%;
+  background-color: rgb(55, 170, 55);
+  color: white;
+  font-size: 100%;
 }
