--- a/css/widescreen.css
+++ b/css/widescreen.css
@@ -1,5 +1,5 @@
 /* Align icon to left */
-.items .item {
+#what .items .item {
   display: flex;
   text-align: left;
 }
@@ -9,4 +9,8 @@
   margin-right: 1.3rem;
   align-self: center;
   margin-bottom: 0;
+}
+
+#contact form {
+  flex: 2;
 }
